2015-06-26 Ben Shi <powerstudio1st AT 163 DOT com>

	* device/include/float.h:
	  Hide sdcc library private macros.
	* support/sdbinutils/include/objalloc.h:
	* support/sdbinutils/libiberty/objalloc.c:
	  Apply patches from GNU.

2015-06-25 Ben Shi <powerstudio1st AT 163 DOT com>

	* configure:
	* configure.in:
	* device/non-free/include/Makefile.in:
	  Fix the bug "make uninstall" left empty directory. 
	* src/SDCCBBlock.c:
	  Apply patch #158 to fix bug #1693.
	* support/regression/tests/version.c:
	  Fix the failure in "make test-host".

2015-06-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c,
	  doc/sdccman.lyx,
	  support/regression/tests/version.c:
	  Implement version macros RFE #441.

2015-06-24 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/collate-results.py:
	  Fix the bug that an abnormal stop in reg-rest can not be detected.

2015-06-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.c:
	  Fix bug #2389.
	* src/SDCCglue.c,
	  src/SDCCmain.c,
	  src/SDCCutil.c,
	  src/SDCCutil.h:
	  Remove build date from version string to make reproducible builds easier.

2015-06-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* Small Device C Compiler 3.5.0 released
	* .version, doc/sdccman.lyx: changed sdcc version to 3.5.1

2015-06-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/scripts/gen_known_bugs.pl: fixed by Raphael Neider for changed
	  SourceForge pages

2015-06-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* .version,
	* doc/INSTALL.txt,
	* doc/sdccman.lyx: version 3.5.0

2015-06-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCmain.c (preProcess): reverted removal of SDCC macro
	* src/stm8/gen.c (genLeftShiftLiteral): hushed a compiler warning
	* support/regression/tests/gcc-torture-execute-960218-1.c,
	* support/regression/tests/gcc-torture-execute-20030913-1.c: renamed test()
	  to prevent double testing, renamed glob to prevent name conflict	